import { shallow, mount } from 'enzyme';
import toJSON from 'enzyme-to-json';
import CartCount from '../components/CartCount';

describe('<CartCount />', () => {
  it('renders', () => {
    shallow(<CartCount count={10} />);
  });

  const wrapper = mount(<CartCount count={10} />);
  it('matches the snapshot', () => {
    expect(toJSON(wrapper)).toMatchSnapshot();
  });

  it('updates via props', () => {
    expect(toJSON(wrapper)).toMatchSnapshot();
    wrapper.setProps({ count: 20 });
    expect(toJSON(wrapper)).toMatchSnapshot();
  });
});
